tdf#138698 remove/ignore 'distributed' if feature is unknown

which it is in dbaccess. Its is a calc feature added at...

commit 755ad6834625488c5d31d4bacc9370eae7ffd8f3
Date:   Tue Oct 5 11:15:56 2010 -0400

    Ported calc-distributed-cell-text-*.diff from ooo-build.

Change-Id: I1e8856e2ab635d270a487f5a68ac5c386f46a080